# ninja-timer-mk2

./: .gitattributes  .gitignore  Cargo.toml  package.json
client/: api.ts  index.html  index.tsx  package-lock.json  package.json  tailwind.config.js
client/components/: App.tsx  Footer.tsx  Navbar.tsx  Notifications.tsx  Settings.tsx  Timers.tsx  Toggle.tsx
src/: assets.rs  broadcast.rs  build.rs  display.rs  gpio.rs  info.rs  ip.rs  main.rs  settings.rs  state.rs  timer.rs  web.rs
src/gpio/: cringedSocket.rs  mod.rs  raspi.rs
static/: index.html  index.js
