[package]
name = "ninja-timer-mk2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "*"
actix-multipart = "*"
futures-util = "*"
parking_lot = "*"
tokio = "*"
rppal = "*"
chrono = "*"
serde_json = "*"
serde = { version ="*", features = ["derive"] }

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "image", "mixer"]
